<resources>
    <string name="app_name">TinDog</string>
    <string name="title_activity_map">Map</string>
    <string name="tindog_logo">Tindog Logo</string>
    <string name="give_a_pup_a_chance">Give a pup a chance!</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="update_the_local_map_with_my_knowledge">Update the local map with my knowledge</string>
    <string name="offer_dog_care_services">Offer dog-care services</string>
    <string name="offer_advice_on_fostering_adopting">Offer advice on fostering/adopting</string>
    <string name="find_a_dog_family_foundation">Find a dog/family/foundation</string>
    <string name="dog_main_image">Dog main image</string>
    <string name="dog_s_name">Dog\'s name</string>
    <string name="history">History:</string>
    <string name="behaviorPref">Behavior:</string>
    <string name="genderPref">Gender:</string>
    <string name="sizePref">Size:</string>
    <string name="agePref">Age:</string>
    <string name="videos">Videos:</string>
    <string name="no_videos_available">No videos available</string>
    <string name="default_age">2.5 years old</string>
    <string name="default_size">Chihuahua-sized</string>
    <string name="default_gender">Male</string>
    <string name="default_behavior">Quiet</string>
    <string name="default_interactions">Loves children</string>
    <string name="default_history">No history available</string>
    <string name="pictures">Pictures:</string>
    <string name="default_pictures">No pictures available</string>
    <string name="our_experience_with_dogs">Our experience with dogs:</string>
    <string name="how_we_want_to_help">How we want to help:</string>
    <string name="family_s_pseudonym">Family\'s name</string>
    <string name="default_experience">No experience yet…</string>
    <string name="default_address">Street, City, Country</string>
    <string name="magnifying_glass">Refresh the search</string>
    <string name="dogs">Dogs</string>
    <string name="families">Families</string>
    <string name="foundations">Foundations</string>
    <string name="profile_image">Profile image</string>
    <string name="family_profile">My profile</string>
    <string name="dog_profile">Dog Profile</string>
    <string name="selected_profile_index">selected_profile_index</string>
    <string name="my_family_s_pseudonym">My family\'s pseudonym (*required, shown to others)</string>
    <string name="my_cell_number_not_shown_to_others">My cell number (not shown to others)</string>
    <string name="my_email_not_shown_to_others">My email (not shown to others)</string>
    <string name="my_experience_with_fostering_adoption">My experience with fostering/adoption</string>
    <string name="upload_pics_of_my_current_pets">Upload pics of my current pets!</string>
    <string name="choose_my_family_page_picture">Choose my family page picture!</string>
    <string name="done">DONE</string>
    <string name="no_details_available">No details available</string>
    <string name="family_main_image">Family main image</string>
    <string name="mainImage">mainImage</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="image">Image</string>
    <string name="action_update_profile">Update profile</string>
    <string name="action_search_profiles">Search for profiles</string>
    <string name="login_state">login state</string>
    <string name="edit_my_family_profile">Edit my profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="my_name">My name (not shown to others)</string>
    <string name="action_done">Done</string>
    <string name="edit_my_user_profile">Edit my user profile</string>
    <string name="edit_my_preferences">Edit search preferences</string>
    <string name="edit">edit</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="device_version_too_low">Your device\'s Android version is too low.</string>
    <string name="please_enter_your_email">Please enter your email.</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="current_name">Current name</string>
    <string name="new_name">New name</string>
    <string name="current_email">Current email</string>
    <string name="current_password">Please enter your current password</string>
    <string name="new_password">New Password</string>
    <string name="wrong_password">Wrong Password, please try again.</string>
    <string name="sent_password_reset_email">We just sent you a password reset link at your registered email.</string>
    <string name="successfully_updated_password">Successfully updated password.</string>
    <string name="failed_to_update_password">Failed to update password.</string>
    <string name="error_accessing_user_info">Error accessing user information.</string>
    <string name="successfully_updated_email">Successfully updated email.</string>
    <string name="failed_to_update_email">Failed to update password.</string>
    <string name="successfully_updated_name">Successfully updated name.</string>
    <string name="failed_to_update_name">Failed to update name.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="reached_max_images">You have reached the maximum number of images, please select an image to replace.</string>
    <string name="no_permissions_terminating">The app cannot work properly without these permissions. Terminating the app.</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="street">Street</string>
    <string name="foundation">Foundation</string>
    <string name="foundationPref">Foundation:</string>
    <string name="upload_dog_pics">Upload dog pics</string>
    <string name="choose_dog_s_main_pic">Choose dog\'s main pic</string>
    <string name="dog_s_history">Dog\'s history</string>
    <string name="foundation_name">Foundation Name</string>
    <string name="foundation_name_required">Foundation Name (*required)</string>
    <string name="website">Website</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_phone">Contact phone</string>
    <string name="street_number">Street Number</string>
    <string name="upload_foundation_pics">Upload Foundation Pics</string>
    <string name="foundation_main_pic">Foundation Main Pic</string>
    <string name="foundation_main_image">Foundation main image</string>
    <string name="search_dogs_empty_search_to_see_all_dogs">Search dogs (empty search to see all dogs)</string>
    <string name="edit_my_foundation_profile">Edit my foundation profile</string>
    <string name="edit_my_foundation_dogs">Edit my foundation dogs</string>
    <string name="interactions">Interactions:</string>
    <string name="behavior">Behavior:</string>
    <string name="race">Race:</string>
    <string name="gender">Gender:</string>
    <string name="size">Size:</string>
    <string name="age">Age:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="no_email_available">No email available</string>
    <string name="hidden_password">********</string>
    <string name="name">Name:</string>
    <string name="who_i_am">Who I am</string>
    <string name="i_want_my_doggy_to_be">I want my doggy to be…</string>
    <string name="find_my_perfect_friend">Find my perfect friend!</string>
    <string name="skip_this_step_leave_defaults">Skip this step (leave defaults)</string>
    <string name="search">Search</string>
    <string name="add_a_dog">Add a dog</string>
    <string name="save">Save</string>
    <string name="foundation_profile">My organization</string>
    <string name="preferences">Preferences</string>
    <string name="profile_finder">Profile Finder</string>
    <string name="dog_not_saved">Dog not saved! Please fill in valid values for the fields marked with *.</string>
    <string name="family_not_saved">Family not saved! Please fill in valid values for the fields marked with *.</string>
    <string name="foundation_not_saved">Foundation not saved! Please fill in valid values for the fields marked with *.</string>
    <string name="dog_s_name_required">Dog\'s name (*required)</string>
    <string name="country_required">Country (*required)</string>
    <string name="city_required">City (*required)</string>
    <string name="street_required">Street (*required)</string>
    <string name="street_number_required">Street Number (*required)</string>
    <string name="distance_from_me">Distance from me:</string>
    <string name="zero">0</string>
    <string name="unit_km">km</string>
    <string name="search_only_in_my_country">Search only in my country (recommended)</string>
    <string name="app_preference_sign_in_state">app_preference_sign_in_state</string>
    <string name="app_preferences">app_preferences</string>
    <string name="location_rationale">Location is required to improve the search results by checking the distance relative to you. If you don\'t allow this, search results may be less useful.</string>
    <string name="help_organize_adoption_events">Help organize adoption events</string>
    <string name="how_we_can_help">How we can help:</string>
    <string name="moving_equipment_around">Moving equipment around</string>
    <string name="moving_dogs_around">Moving dogs around</string>
    <string name="coordinating_and_scheduling">Coordinating and scheduling</string>
    <string name="lending_a_hand_at_events">Lending a hand at events</string>
    <string name="dogwalking">Dogwalking</string>
    <string name="where">Where:</string>
    <string name="when">When:</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string-array name="foster_period">
        <item>Up to 1 week</item>
        <item>Up to a few weeks</item>
        <item>Up to 1 month</item>
        <item>Up to 1.5 months</item>
        <item>Up to 2 months</item>
        <item>Up to 3 months</item>
    </string-array>
    <string name="providing_a_home">Providing a home</string>
    <string name="foster_a_dog">Foster a dog</string>
    <string name="adopt_a_dog">Adopt a dog</string>
    <string name="foster_and_possibly_adopt_a_dog">Foster and possibly adopt a dog</string>
    <string name="profile_id">profile_id</string>
    <string name="profile_type">profile_type</string>
    <string name="profile_parcelable">profile_parcelable</string>
    <string name="find_a_dog">Find a dog</string>
    <string name="find_a_family">Find a welcoming home</string>
    <string name="find_a_foundation">Find an adoption organization</string>
    <string name="chosen_activity">chosen_activity</string>
    <string name="no_history_available">No history available</string>
    <string name="add_a_video_link_http">Add a video link (http://...)</string>
    <string name="remove_a_dog">Remove a dog</string>
    <string name="show_dogs_in_the_app_s_widget">Show random nearby dogs in the app\'s widget</string>
    <string name="show_this_dog_in_the_app_widget">Show this dog in the app\'s widget</string>
    <string name="no_associated_foundation">No associated foundation</string>
    <string name="marker_title">Marker Title</string>
    <string name="marker_description">Description</string>
    <string name="street_incl_number">Street (including number)</string>
    <string name="state">State</string>
    <string name="share_this_dog_profile">Share this dog profile</string>
</resources>