<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:title="@string/save"/>
    <item
        android:id="@+id/action_done"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="@string/action_done"/>
    <item
        android:id="@+id/action_edit_preferences"
        android:orderInCategory="97"
        app:showAsAction="never"
        android:title="@string/edit_my_preferences"/>
    <item
        android:id="@+id/action_signin"
        android:orderInCategory="98"
        app:showAsAction="never"
        android:title="@string/sign_in"/>
</menu>