<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_my_family_profile"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="95"
        app:showAsAction="never"
        android:title="@string/edit_my_family_profile"/>
    <item
        android:id="@+id/action_edit_preferences"
        android:orderInCategory="96"
        app:showAsAction="never"
        android:title="@string/edit_my_preferences"/>
    <item
        android:id="@+id/action_show_in_widget"
        android:orderInCategory="97"
        app:showAsAction="never"
        android:title="@string/show_dogs_in_the_app_s_widget"/>
    <item
        android:id="@+id/action_signin"
        android:orderInCategory="98"
        app:showAsAction="never"
        android:title="@string/sign_in"/>
</menu>